@@ -25,6 +25,7 @@ Other features
 ~~~~~~~~~~~~~~
 
  * Added Elasticsearch 7 support (pySilver)
+ * Added Python 3.8 support (John Carter, Matt Westcott)
  * Added ``construct_page_listing_buttons`` hook (Michael van Tellingen)
  * Added more detailed documentation and troubleshooting for installing OpenCV for feature detection (Daniele Procida)
  * Move and refactor upgrade notification JS (Jonny Scholes)
